[package]
name = "async-jobs"
version = "0.2.0"
authors = ["Bobby Reynolds <bobby@reynoldsbd.net>"]
edition = "2018"
description = "Asynchronous job orchestration for Rust"
documentation = "https://docs.rs/async-jobs"
readme = "README.md"
repository = "https://github.com/reynoldsbd/async-jobs"
license = "MIT OR Apache-2.0"
keywords = ["async", "job", "dependency", "graph"]
categories = ["algorithms", "asynchronous", "concurrency"]

[dependencies]
downcast-rs = "1.2"
futures = "0.3"
num_cpus = "1.13"

[dev-dependencies]
async-std = { version = "1.6", features = ["attributes"] }
